traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:21: error: Unmatched closing brace '}' ignored here
      }
      ^TraversalDiagonal:26: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalDiagonal:29: error: expected start of definition
	override def forward()  {
                 ^TraversalDiagonal:32: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalDiagonal:35: error: expected start of definition
	override def backward() {
                 ^TraversalDiagonal:38: error: Unmatched closing brace '}' ignored here
}
^